# Meta_Hackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  error.txt  force_push.bat  inference.py  openenv.yaml  output.txt  pyproject.toml  requirements.txt  submit.bat  submit_to_hf.bat
agent/: hf_agent.py
env/: customer_support_env.py  models.py  scenarios.py
grader/: grader.py
server/: app.py
tasks/: easy_task.py  hard_task.py  medium_task.py
