[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "suraksha-ai-customer-support"
version = "0.1.0"
description = "Suraksha AI Customer Support Escalation Agent for OpenEnv"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Himanshu Alien"}
]
dependencies = [
    "pydantic>=2.0",
    "transformers>=4.38.0",
    "torch>=2.0.0",
    "accelerate>=0.27.0",
    "protobuf>=3.20.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "openenv>=0.1.0",
    "openai>=1.50.0",
    "httpx==0.27.2"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["inference"]
